added screen shots to show a few pieces of code

--- a/Vacation_search/Vacation_Search.ipynb
+++ b/Vacation_search/Vacation_Search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c4b4829f",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "097505e0",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
        "4           0        6.11           clear sky  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "c2bd2f90",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,14 +187,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "4bc847f1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fa81101a60ee4a2989a39e6524015b9d",
+       "model_id": "4c39c875c24c423bac6209227ee9ecdf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -229,14 +229,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "8f1dd942",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1ae1e9505414e348768797a64a81d6c",
+       "model_id": "6875fa69045143f6958fdbd2aa764bf5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -271,14 +271,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "a31933f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7c075c37ee4448ea832846d9182a028",
+       "model_id": "09131104508c42609a100be8658a45fc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -313,14 +313,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "ed61e344",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36d437bc41e0497cbc8c40c415e4dcb3",
+       "model_id": "944045cc71394f71b384689aaab69d65",
        "version_major": 2,
        "version_minor": 0
       },
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "4fcfd551",
    "metadata": {},
    "outputs": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "8093a490",
    "metadata": {},
    "outputs": [
@@ -498,7 +498,7 @@
        "23          75        3.09       broken clouds  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "5eeb796a",
    "metadata": {},
    "outputs": [
@@ -530,7 +530,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,27 +541,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "id": "743bf89c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "City_ID       274\n",
-       "City          274\n",
-       "Country       270\n",
-       "Date          274\n",
-       "Lat           274\n",
-       "Lng           274\n",
-       "Max Temp      274\n",
-       "Humidity      274\n",
-       "Cloudiness    274\n",
-       "Wind Speed    274\n",
+       "City_ID                84\n",
+       "City                   84\n",
+       "Country                80\n",
+       "Lat                    84\n",
+       "Lng                    84\n",
+       "Max Temp               84\n",
+       "Humidity               84\n",
+       "Cloudiness             84\n",
+       "Wind Speed             84\n",
+       "Current Description    84\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "5eb8d4bf",
    "metadata": {},
    "outputs": [
@@ -592,7 +592,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "689f78b7",
    "metadata": {},
    "outputs": [
@@ -770,7 +770,7 @@
        "101             "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "56e80271",
    "metadata": {},
    "outputs": [
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "dd89fc12",
    "metadata": {},
    "outputs": [],
@@ -836,8 +836,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "4d11d977",
+   "execution_count": 16,
+   "id": "41d5a6a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,8 +846,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "c20c4ee3",
+   "execution_count": 17,
+   "id": "5774c0e6",
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +863,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,8 +874,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "1040ce2d",
+   "execution_count": 20,
+   "id": "98dd891e",
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1007,7 @@
        "      <td>22.8909</td>\n",
        "      <td>-109.9124</td>\n",
        "      <td>clear sky</td>\n",
-       "      <td>Hotel Tesoro Los Cabos</td>\n",
+       "      <td>Vista Roof Restaurant</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1036,10 +1036,10 @@
        "37   Holiday Inn Express & Suites Lawrenceville, an...  \n",
        "48                                    Haiyuntian Hotel  \n",
        "101                                             Family  \n",
-       "107                             Hotel Tesoro Los Cabos  "
+       "107                              Vista Roof Restaurant  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1050,14 +1050,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "id": "6e0b108d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a881cb73c118445d8303f5795d6268d5",
+       "model_id": "72e96a8018804835800ca01a19700d1d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1098,8 +1098,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "a42ea751",
+   "execution_count": 22,
+   "id": "3104cc5e",
    "metadata": {},
    "outputs": [],
    "source": [
