added marker for vacation map

--- a/vacation_itinerary/Vacation_Itinerary.ipynb
+++ b/vacation_itinerary/Vacation_Itinerary.ipynb
@@ -205,13 +205,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39c2aa7f35dc4565be21f8b541009aa1",
+       "model_id": "d8bbca14a0ce4aa48304910a71e084b2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
        "32  Casa Concejos  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "array([[42.25, -2.5 ]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -351,7 +351,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f10cbcbcf904492f8c1ad65d2d164adb",
+       "model_id": "7d9bf128d86e474ea7ea184204a3ffee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -375,13 +375,16 @@
     "                              (stop2[0][0],stop2[0][1]),\n",
     "                              (stop3[0][0],stop3[0][1])],\n",
     "                               )\n",
+    "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
+    "fig.add_layer(marker_layer)\n",
+    "\n",
     "fig.add_layer(trip)\n",
     "fig\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +494,7 @@
        "4     overcast clouds        Hotel Hanstholm  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,13 +531,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "46cc8a9b9e54415da46b882fe4a0851a",
+       "model_id": "db8a08bfff954c5699b2a4063c65efb1",
        "version_major": 2,
        "version_minor": 0
       },
